force-app/main/default/objects/GoalItem__c/GoalItem__c.object-meta.xml
<CustomObject>
    <label>Item da Meta</label>
    <nameField>
        <label>Nome do Item da Meta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da Meta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>