force-app/main/default/objects/GoalItem__c/fields/AccomplishedValue__c.field-meta.xml
<CustomField>
    <fullName>AccomplishedValue__c</fullName>
    <label>Valor Realizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>