force-app/main/default/objects/GoalItem__c/fields/AchievedPercent__c.field-meta.xml
<CustomField>
    <fullName>AchievedPercent__c</fullName>
    <formula>IF( AccomplishedValue__c &gt;=  GoalValue__c ,  ComissionPercent__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentagem Atingida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>