force-app/main/default/objects/GoalItem__c/fields/ComissionPercent__c.field-meta.xml
<CustomField>
    <fullName>ComissionPercent__c</fullName>
    <label>Porcentagem de Comissão</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>