force-app/main/default/objects/GoalItem__c/fields/GoalValue__c.field-meta.xml
<CustomField>
    <fullName>GoalValue__c</fullName>
    <label>Valor da Meta</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>