force-app/main/default/objects/GoalItem__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Pagamento</label>
    <referenceTo>PaymentCondition__c</referenceTo>
    <relationshipLabel>Itens da Meta</relationshipLabel>
    <relationshipName>GoalItems</relationshipName>
    <type>Lookup</type>
</CustomField>