force-app/main/default/objects/GoalItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da Meta</relationshipLabel>
    <relationshipName>GoalItems</relationshipName>
    <type>Lookup</type>
</CustomField>