force-app/main/default/objects/GoalItem__c/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>ProductFamily__c</referenceTo>
    <relationshipLabel>Itens da Meta</relationshipLabel>
    <relationshipName>GoalItems</relationshipName>
    <type>Lookup</type>
</CustomField>