force-app/main/default/objects/GoalItem__c/fields/ProjectedValue__c.field-meta.xml
<CustomField>
    <fullName>ProjectedValue__c</fullName>
    <label>Valor Projetado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>