force-app/main/default/objects/GoalItem__c/recordTypes/PaymentCondition.recordType-meta.xml
<RecordType>
    <fullName>PaymentCondition</fullName>
    <active>true</active>
    <label>Condição de Pagamento</label>
</RecordType>