force-app/main/default/objects/GoalItem__c/recordTypes/ProductFamily.recordType-meta.xml
<RecordType>
    <fullName>ProductFamily</fullName>
    <active>true</active>
    <label>Família de Produto</label>
</RecordType>