force-app/main/default/objects/GoalItem__c/validationRules/Parameters_Must_Not_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Parameters_Must_Not_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.DeveloperName = &apos;Performance&apos;,
  OR(
    NOT(ISBLANK( Product__c )),
    NOT(ISBLANK( ProductFamily__c )),
    NOT(ISBLANK( PaymentCondition__c ))
  )
)</errorConditionFormula>
    <errorMessage>Meta de performance não deve ter parâmetros de produto, família ou pagamento especificados.</errorMessage>
</ValidationRule>