force-app/main/default/objects/GoalItem__c/validationRules/Payment_Condition_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Condition_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  RecordType.DeveloperName = &apos;PaymentCondition&apos;, 
  ISBLANK( PaymentCondition__c )
)</errorConditionFormula>
    <errorDisplayField>PaymentCondition__c</errorDisplayField>
    <errorMessage>Meta de condição de pagamento deve ser especificada</errorMessage>
</ValidationRule>