force-app/main/default/objects/GoalItem__c/validationRules/Product_Family_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Family_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  RecordType.DeveloperName = &apos;ProductFamily&apos;, 
  ISBLANK( ProductFamily__c )
)</errorConditionFormula>
    <errorDisplayField>ProductFamily__c</errorDisplayField>
    <errorMessage>Meta de família de produto deve ter a família especificada.</errorMessage>
</ValidationRule>