force-app/main/default/objects/GoalItem__c/validationRules/Product_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  RecordType.Name = &apos;Product&apos;, 
  ISBLANK( Product__c )
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Meta de produto deve ter um produto especificado.</errorMessage>
</ValidationRule>